# vibe-trading

./: .env.example  .gitignore  AGENT.md  API.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  LICENSE  QUICKSTART.md  README.md  README_PROFILES.md  SETUP.md  SETUP_COMPLETE.md  SUMMARY.md  docker-compose.yml  package.json
backend/: .env.example  .flake8  .gitignore  Dockerfile  cdk.json  debug_bcrypt.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_vnstock.py  tsconfig.json
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: security.py
backend/app/db/: database.py
backend/app/models/: market.py  user.py
backend/app/schemas/: user.py
backend/app/services/: dnse_client.py  timescale_service.py  vnstock_service.py
backend/app/workers/: market_worker.py
backend/lambda/chat-handler/: index.ts  package.json
backend/lambda/news-analysis/: index.ts  package.json
backend/lambda/order-handler/: index.ts  package.json
backend/lambda/stock-data-handler/: index.ts  package.json
backend/lambda/technical-analysis/: index.ts  package.json
backend/lib/: vibe-trading-stack.ts
backend/lib/constructs/: agent-construct.ts
backend/lib/stacks/: agents-stack.ts  api-stack.ts  database-stack.ts
backend/mcp-servers/: news_analysis_server.py  news_tools_server.py  stock_data_server.py  stock_data_tools_server.py  stock_order_tools_server.py  technical_analysis_server.py  technical_analysis_tools_server.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: conftest.py  test_auth.py  test_dnse_client.py  test_main.py  test_vnstock_service.py
database/: README.md  init.sql  postgresql.conf
docs/: ADDING_AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  REFACTORING.md  TROUBLESHOOTING.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package.json  vite.config.ts
guidelines/: architecture.md  database.md  frontend_implementation.md  requirements.md  tasks.md  testing.md
scripts/: SCRIPTS_SUMMARY.md  ci.sh  format-check.sh  format.sh  lint.sh  pre-commit-hook.sh  test.sh
(+28 files in other folders)
